# ALIAKMON

./: .gitignore  BUILD.md  CMakeLists.txt  IAPWS9521D.f90  Makefile  Makefile.gnu  Makefile.gnu.aris  Makefile.heffte  Makefile.heffte.aris  Makefile.intel  Makefile.intel.aris  Makefile.mkl  Makefile.pgi.aris  README.md  TODO  aliakmon.f90  aliakmon.nml  config.cuda  config.cufft  config.fftw  config.heffte.cufft  config.heffte.fftw  config.heffte.mkl  config.mkl  config.mkl.noheffte  config.stock  configure_fftw.sh  configure_hdf5.sh  data.f90  fft_alloc_cpp.cpp  fft_cuda.bat  fft_cuda.cpp  fft_cuda_cpp.cpp  fft_cuda_f90.f90  fft_fftw.f90  fft_fftw_f90.f90  fft_heffte-no_openmp.f90  fft_heffte-openmp.f90  fft_heffte.f90  fft_mpi.f90  (+13 more)
python/: black-body_cmap.npy  frames.py  plot.py  plot_rad.py  s.py  time_series.py
